# amm

./: .gitignore  Cargo.toml  README.md
src/: contract.rs  error.rs  execute.rs  instantiate.rs  lib.rs  msg.rs  query.rs  state.rs
tests/: test_amm_contract.rs
